<resources>
    <string name="app_name">CORFOGA</string>
    <!-- Login
    Palabras que se van a utilizar en login-->
    <string name="loginButton">Ingresar</string>
    <string name="saveInspection">Guardar</string>
    <string name="userName">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="loading">Espere mientras termina la transacción</string>
    <!-- Vistas
    Palabras que se van a utlizar en las vistas animales y fincas en los items -->
    <string name="listFarm">Lista de Animales</string>
    <string name="Asocebu">ID del ASOCEBU:</string>
    <string name="Id_animal">ID del animal:</string>
    <string name="bottons">Escoja el número de inspección</string>
    <!-- Menus
    Palabras que se van a utilizar en los menus -->
    <string name="save">Guardar</string>
    <string name="Importar">Importar"</string>
    <string name="Exportar">Exportar"</string>
    <string name="buscarAnimal">BuscarAnimal"</string>
    <string name="buscarFinca">BuscarFinca"</string>
    <!-- Estilos botones -->
    <string name="inspectionOne">Inspección 1</string>
    <string name="inspectionTwo">Inspección 2</string>
    <string name="inspectionThree">Inspección 3</string>
    <string name="inspectionFour">Inspección 4</string>

    <string-array name="alimento">
        <item>1.Pastoreo</item>
        <item>2.Semi Estabulación</item>
        <item>3.Estabulación</item>
        <item>4.Suplemento en Potrero</item>
    </string-array>

    <string-array name="situacion">
        <item>1.Normal</item>
        <item>2.Muerto</item>
        <item>3.Comercializado</item>
        <item>4.No en manga</item>
    </string-array>
</resources>
