<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bryan.corfoga.Activity.LoginActivity"
    android:padding="@dimen/paddingAll"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/corfoga"
            android:id="@+id/imageView"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:text="w@gmail.com"
            android:hint="@string/userName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="12345678"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <Button
            android:layout_marginTop="16dp"
            android:text="@string/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBarLayout"
            android:layout_marginTop="12dp"
            android:weightSum="1">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:progressDrawable="@drawable/circular_progress_bar" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.37"
                android:textColor="@color/colorPrimary"
                android:text="@string/loading"
                android:textSize="16sp"
                android:gravity="center"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
